Minor formatting